
//////////////////////////////////////////////////////
//	Puvodni verze pro konsDB. Postupne odmazavat	//
//////////////////////////////////////////////////////

syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "IdentificationDocument.proto";
import "GrpcDate.proto";
import "Address.proto";
import "Contact.proto";

message CreateContactRequest {
   int32 Identity = 1;
   Contact Contact = 2;
}
message CreateContactResponse {
   int32 ContactId = 1;
}
message CreateRequest {
   string BirthNumber = 1;
   string Ico = 2;
   string DegreeBefore = 3;
   string DegreeAfter = 4;
   string FirstName = 5;
   string LastName = 6;
   cis.types.GrpcDate DateOfBirth = 7;
   string PlaceOfBirth = 8;
   string NameJuridicalPerson = 9;
   Genders Gender = 10;
   IdentificationDocument IdentificationDocument = 11;
   repeated Address Addresses = 12;
   repeated Contact Contacts = 13;
}
message CreateResponse {
   int32 Identity = 1;
}
message CustomerInput {
   string BirthNumber = 1;
   string Ico = 2;
   string DegreeBefore = 3;
   string DegreeAfter = 4;
   string FirstName = 5;
   string LastName = 6;
   cis.types.GrpcDate DateOfBirth = 7;
   string PlaceOfBirth = 8;
   string NameJuridicalPerson = 9;
   Genders Gender = 10;
   IdentificationDocument IdentificationDocument = 11;
}
message DeleteContactRequest {
   int32 Identity = 1;
   int32 ContactId = 2;
}
enum Genders {
   Undefined = 0;
   Male = 1;
   Female = 2;
}
message UpdateAdressRequest {
   int32 Identity = 1;
   Address Address = 2;
}
message UpdateBasicDataRequest {
   int32 Identity = 1;
   CustomerInput Customer = 2;
}